// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventAdmin /> it renders correctly with event Id 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "default": Object {
          "fragment": Object {
            "abstractKey": null,
            "argumentDefinitions": Array [
              Object {
                "defaultValue": null,
                "kind": "LocalArgument",
                "name": "eventId",
              },
            ],
            "kind": "Fragment",
            "metadata": null,
            "name": "EventAdminQuery",
            "selections": Array [
              Object {
                "alias": "event",
                "args": Array [
                  Object {
                    "kind": "Variable",
                    "name": "id",
                    "variableName": "eventId",
                  },
                ],
                "concreteType": null,
                "kind": "LinkedField",
                "name": "node",
                "plural": false,
                "selections": Array [
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Literal",
                        "name": "isAuthenticated",
                        "value": true,
                      },
                    ],
                    "kind": "FragmentSpread",
                    "name": "EventFormPage_event",
                  },
                ],
                "storageKey": null,
              },
            ],
            "type": "Query",
          },
          "hash": "3775b6ea7dd35a193d5a36a40652168c",
          "kind": "Request",
          "operation": Object {
            "argumentDefinitions": Array [
              Object {
                "defaultValue": null,
                "kind": "LocalArgument",
                "name": "eventId",
              },
            ],
            "kind": "Operation",
            "name": "EventAdminQuery",
            "selections": Array [
              Object {
                "alias": "event",
                "args": Array [
                  Object {
                    "kind": "Variable",
                    "name": "id",
                    "variableName": "eventId",
                  },
                ],
                "concreteType": null,
                "kind": "LinkedField",
                "name": "node",
                "plural": false,
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "__typename",
                    "storageKey": null,
                  },
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "id",
                    "storageKey": null,
                  },
                  Object {
                    "abstractKey": null,
                    "kind": "InlineFragment",
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "EventReview",
                        "kind": "LinkedField",
                        "name": "review",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "status",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "comment",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "refusedReason",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "updatedAt",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "deletedAt",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "author",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "displayName",
                            "storageKey": null,
                          },
                          Object {
                            "abstractKey": null,
                            "kind": "InlineFragment",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "isAdmin",
                                "storageKey": null,
                              },
                            ],
                            "type": "User",
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "User",
                        "kind": "LinkedField",
                        "name": "creator",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "EventTranslation",
                        "kind": "LinkedField",
                        "name": "translations",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "locale",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "body",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "metaDescription",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "link",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "viewerDidAuthor",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "bodyUsingJoditWysiwyg",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "TimeRange",
                        "kind": "LinkedField",
                        "name": "timeRange",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "startAt",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "endAt",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "GoogleMapsAddress",
                        "kind": "LinkedField",
                        "name": "googleMapsAddress",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "formatted",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "json",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "lat",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "lng",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "enabled",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "commentable",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "customCode",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "guestListEnabled",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Theme",
                        "kind": "LinkedField",
                        "name": "themes",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Project",
                        "kind": "LinkedField",
                        "name": "projects",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "steps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Media",
                        "kind": "LinkedField",
                        "name": "media",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "url",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "lat",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "lng",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "fullAddress",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "authorAgreeToUsePersonalDataForEventOnly",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "adminAuthorizeDataTransfer",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "maxRegistrations",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "isMeasurable",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "ParticipantConnection",
                        "kind": "LinkedField",
                        "name": "participants",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "totalCount",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                    ],
                    "type": "Event",
                  },
                ],
                "storageKey": null,
              },
            ],
          },
          "params": Object {
            "cacheID": "e08fef95406627d21db88efa514ba346",
            "id": null,
            "metadata": Object {},
            "name": "EventAdminQuery",
            "operationKind": "query",
            "text": "query EventAdminQuery(
  $eventId: ID!
) {
  event: node(id: $eventId) {
    __typename
    ...EventFormPage_event_FngS2
    id
  }
}

fragment EventFormPage_event_FngS2 on Event {
  id
  review {
    status
    comment
    refusedReason
    id
  }
  deletedAt
  author {
    __typename
    id
    ... on User {
      isAdmin
    }
  }
  creator {
    id
  }
  translations {
    locale
    title
    body
    metaDescription
    link
  }
  viewerDidAuthor
  ...EventForm_event
}

fragment EventForm_event on Event {
  id
  bodyUsingJoditWysiwyg
  timeRange {
    startAt
    endAt
  }
  googleMapsAddress {
    formatted
    json
    lat
    lng
  }
  enabled
  commentable
  customCode
  guestListEnabled
  deletedAt
  themes {
    id
    title
  }
  projects {
    id
    title
  }
  steps {
    __typename
    id
    title
  }
  media {
    url
    id
  }
  author {
    __typename
    id
    displayName
    ... on User {
      isAdmin
    }
  }
  lat
  lng
  fullAddress
  review {
    status
    comment
    refusedReason
    updatedAt
    id
  }
  translations {
    locale
    title
    body
    metaDescription
    link
  }
  authorAgreeToUsePersonalDataForEventOnly
  adminAuthorizeDataTransfer
  maxRegistrations
  isMeasurable
  participants {
    totalCount
  }
}
",
          },
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "eventId": "event1",
      }
    }
  />
</Fragment>
`;

exports[`<EventAdmin /> it renders correctly without event Id 1`] = `
<Fragment>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "default": Object {
          "fragment": Object {
            "abstractKey": null,
            "argumentDefinitions": Array [
              Object {
                "defaultValue": null,
                "kind": "LocalArgument",
                "name": "eventId",
              },
            ],
            "kind": "Fragment",
            "metadata": null,
            "name": "EventAdminQuery",
            "selections": Array [
              Object {
                "alias": "event",
                "args": Array [
                  Object {
                    "kind": "Variable",
                    "name": "id",
                    "variableName": "eventId",
                  },
                ],
                "concreteType": null,
                "kind": "LinkedField",
                "name": "node",
                "plural": false,
                "selections": Array [
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Literal",
                        "name": "isAuthenticated",
                        "value": true,
                      },
                    ],
                    "kind": "FragmentSpread",
                    "name": "EventFormPage_event",
                  },
                ],
                "storageKey": null,
              },
            ],
            "type": "Query",
          },
          "hash": "3775b6ea7dd35a193d5a36a40652168c",
          "kind": "Request",
          "operation": Object {
            "argumentDefinitions": Array [
              Object {
                "defaultValue": null,
                "kind": "LocalArgument",
                "name": "eventId",
              },
            ],
            "kind": "Operation",
            "name": "EventAdminQuery",
            "selections": Array [
              Object {
                "alias": "event",
                "args": Array [
                  Object {
                    "kind": "Variable",
                    "name": "id",
                    "variableName": "eventId",
                  },
                ],
                "concreteType": null,
                "kind": "LinkedField",
                "name": "node",
                "plural": false,
                "selections": Array [
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "__typename",
                    "storageKey": null,
                  },
                  Object {
                    "alias": null,
                    "args": null,
                    "kind": "ScalarField",
                    "name": "id",
                    "storageKey": null,
                  },
                  Object {
                    "abstractKey": null,
                    "kind": "InlineFragment",
                    "selections": Array [
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "EventReview",
                        "kind": "LinkedField",
                        "name": "review",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "status",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "comment",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "refusedReason",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "updatedAt",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "deletedAt",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "author",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "displayName",
                            "storageKey": null,
                          },
                          Object {
                            "abstractKey": null,
                            "kind": "InlineFragment",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "args": null,
                                "kind": "ScalarField",
                                "name": "isAdmin",
                                "storageKey": null,
                              },
                            ],
                            "type": "User",
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "User",
                        "kind": "LinkedField",
                        "name": "creator",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "EventTranslation",
                        "kind": "LinkedField",
                        "name": "translations",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "locale",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "body",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "metaDescription",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "link",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "viewerDidAuthor",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "bodyUsingJoditWysiwyg",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "TimeRange",
                        "kind": "LinkedField",
                        "name": "timeRange",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "startAt",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "endAt",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "GoogleMapsAddress",
                        "kind": "LinkedField",
                        "name": "googleMapsAddress",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "formatted",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "json",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "lat",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "lng",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "enabled",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "commentable",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "customCode",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "guestListEnabled",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Theme",
                        "kind": "LinkedField",
                        "name": "themes",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Project",
                        "kind": "LinkedField",
                        "name": "projects",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": null,
                        "kind": "LinkedField",
                        "name": "steps",
                        "plural": true,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "__typename",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "title",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "Media",
                        "kind": "LinkedField",
                        "name": "media",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "url",
                            "storageKey": null,
                          },
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "id",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "lat",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "lng",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "fullAddress",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "authorAgreeToUsePersonalDataForEventOnly",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "adminAuthorizeDataTransfer",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "maxRegistrations",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "kind": "ScalarField",
                        "name": "isMeasurable",
                        "storageKey": null,
                      },
                      Object {
                        "alias": null,
                        "args": null,
                        "concreteType": "ParticipantConnection",
                        "kind": "LinkedField",
                        "name": "participants",
                        "plural": false,
                        "selections": Array [
                          Object {
                            "alias": null,
                            "args": null,
                            "kind": "ScalarField",
                            "name": "totalCount",
                            "storageKey": null,
                          },
                        ],
                        "storageKey": null,
                      },
                    ],
                    "type": "Event",
                  },
                ],
                "storageKey": null,
              },
            ],
          },
          "params": Object {
            "cacheID": "e08fef95406627d21db88efa514ba346",
            "id": null,
            "metadata": Object {},
            "name": "EventAdminQuery",
            "operationKind": "query",
            "text": "query EventAdminQuery(
  $eventId: ID!
) {
  event: node(id: $eventId) {
    __typename
    ...EventFormPage_event_FngS2
    id
  }
}

fragment EventFormPage_event_FngS2 on Event {
  id
  review {
    status
    comment
    refusedReason
    id
  }
  deletedAt
  author {
    __typename
    id
    ... on User {
      isAdmin
    }
  }
  creator {
    id
  }
  translations {
    locale
    title
    body
    metaDescription
    link
  }
  viewerDidAuthor
  ...EventForm_event
}

fragment EventForm_event on Event {
  id
  bodyUsingJoditWysiwyg
  timeRange {
    startAt
    endAt
  }
  googleMapsAddress {
    formatted
    json
    lat
    lng
  }
  enabled
  commentable
  customCode
  guestListEnabled
  deletedAt
  themes {
    id
    title
  }
  projects {
    id
    title
  }
  steps {
    __typename
    id
    title
  }
  media {
    url
    id
  }
  author {
    __typename
    id
    displayName
    ... on User {
      isAdmin
    }
  }
  lat
  lng
  fullAddress
  review {
    status
    comment
    refusedReason
    updatedAt
    id
  }
  translations {
    locale
    title
    body
    metaDescription
    link
  }
  authorAgreeToUsePersonalDataForEventOnly
  adminAuthorizeDataTransfer
  maxRegistrations
  isMeasurable
  participants {
    totalCount
  }
}
",
          },
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "eventId": "",
      }
    }
  />
</Fragment>
`;
